# oneberry-devkit

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  devkit_progress_report.md  index.html  package-lock.json  package.json  update.json  upload-packages.sh
.github/workflows/: build-desktop.yml  build.yml
docs/: linux-cli-guide.md
scripts/: download-binaries.sh  manual-release.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: kubeconfig
src-tauri/src/: lib.rs  utils.rs
src-tauri/src/commands/: cluster.rs  dns.rs  mod.rs  session.rs  setup.rs  vpn.rs
src-tauri/src/services/: health_monitor.rs
src/composables/: useUpdater.ts
src/stores/: app.ts
src/styles/: global.css
src/views/: Dashboard.vue  Logs.vue  Settings.vue
